# yomeru

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  dev.sh  pyproject.toml  setup.sh  start.sh
backend/: main.py  requirements.txt  setup_typesetting.py  typesetting_status.json
backend/api/: state.py
backend/api/routes/: config.py  runs.py  typesetting.py
backend/core/: analyzer.py  annotator.py  config.py  logger.py  models.py  pipeline.py  retry.py  runs.py
backend/core/typesetting/: __init__.py  detector.py  matcher.py  pipeline.py  renderer.py
backend/prompts/: format_auto.md  format_manga.md  system.md
backend/static/: index.html
backend/static/assets/: index-B6jThGpN.css  index-DZsLUrqr.js
backend/yomeru/: main.py
frontend/: vite.config.ts  vite.config.ts.timestamp-1774833233815-741ce9c6c2753.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisSection.tsx  DetectionPhase.tsx  DialogueEditor.tsx  FlowDiagram.tsx  FontsCard.tsx  ImageSorter.tsx  PageDetail.tsx  PhaseBar.tsx  StageView.tsx  ThemeToggle.tsx  TypesetSection.tsx
frontend/src/lib/: api.ts  partialJson.ts  theme.tsx
frontend/src/pages/: Dashboard.tsx  NewRun.tsx  RunDetail.tsx  Settings.tsx
src/yomeru/: __init__.py  __main__.py  app.py
src/yomeru/api/: ws.py
src/yomeru/core/: analyzer.py  annotations.py  annotator.py  config.py  models.py  runs.py
src/yomeru/phases/: __init__.py  analysis.py  detection.py  inpainting.py  matching.py  rendering.py  runner.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
(+104 files in other folders)
