[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yomeru"
version = "0.1.0"
description = "Manga/manhwa context builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "litellm>=1.48.0",
    "Pillow>=10.0.0",
    "json-repair>=0.30.0",
    "pydantic>=2.0.0",
]

[project.scripts]
yomeru = "yomeru.main:main"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-dir]
"" = "backend"
